--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -3,7 +3,7 @@
   width: 100%;
   margin: auto;
   height: 250px;
-  ovrflow: scroll;
+  overflow: scroll;
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
