--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -37,7 +37,8 @@
 
   .NavigationItem a:hover,
   .NavigationItem a:active,
-  .Navigationitem a:active {
+  .Navigationitem a:active,
+  .NavigationItem .active {
     background-color: #8F5C2C;
     border-bottom: 4px solid #40A4C8;
     color: white;
